--- a/css/home.css
+++ b/css/home.css
@@ -97,3 +97,17 @@ a {
     justify-content: center;
 }
 
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0rem 0;
+    margin: 0 1rem;
+}
+
+footer p{
+    color: #303130;
+    font-size: 80%;
+    margin-right: 1rem;
+}
+
