--- a/css/home.css
+++ b/css/home.css
@@ -77,18 +77,6 @@ a {
     font-family: "Heavitas";
 }
 
-.services {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 0rem 0;
-    margin: 0 1rem;
-}
-
-.service img{
-    border-radius: 15px;
-}
-
 .serviceh1{
     font-family: "Heavitas";
     font-size: 2rem;
@@ -138,3 +126,66 @@ footer p{
     width: 100px;
 }
 
+
+.container {
+    overflow: hidden;
+}
+
+.carousel {
+    position: relative;
+}
+
+.carousel-inner {
+    display: flex;
+    overflow: hidden;
+    height: 50vh;
+    flex-wrap: nowrap;
+}
+
+.slide {
+    flex: 0 0 100%;
+    height: 100%;
+    transition: .5s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slide img {
+     border-radius: 15px;
+}
+
+.carousel-controls {
+    position: absolute;
+    z-index: 5;
+    left: 10%;
+    right: 10%;
+    top: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.carousel-dots {
+    position: absolute;
+    z-index: 5;
+    left: 50%;
+    right: 50%;
+    bottom: -1%;
+    display: flex;
+    justify-content: center;
+}
+
+.carousel-dots .dot {
+    border-radius: 50%;
+    margin: 5px;
+    cursor: pointer;
+}
+
+.carousel-dots .active {
+    border: 5px solid #0a790d !important;
+}
+
+.carousel-dots .inactive {
+    border: 5px solid #000000;
+}
